<resources>
        <string name="app_name">嘿</string>
        <string name="hello">生日快乐！</string>
        <string name="from">汤姆</string>
        <string name="btn_reset_label">Reset</string>
        <string name="btn3_label">+3 points</string>
        <string name="btn2_label">+2 points</string>
        <string name="btn1_label">+1 point</string>
        <string name="tname_label">TeamA</string>
</resources>